[package]
name = "ichiran"
version = "0.3.0"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
rust-version = "1.56"
description = "Bindings for ichiran-cli"
readme = "README.md"
repository = "https://github.com/Heliozoa/ichiran-rs"
license = "MPL-2.0"
keywords = ["ichiran", "japanese"]
categories = ["api-bindings"]
resolver = "2"

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_path_to_error = "0.1.9"
thiserror = "1.0.38"
